--- a/IKRPG/res/values/strings.xml
+++ b/IKRPG/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="hello">Hello World, MainActivity!</string>
-    <string name="app_name">IKRPG</string>
+    <string name="app_name">Spell</string>
+    <string name="hello">Desc</string>
 
 </resources>
